--- a/styles.css
+++ b/styles.css
@@ -9,82 +9,57 @@ body {
 header {
     text-align: center;
     padding: 20px 0;
-    background-color: #333;
-}
-
-header h1 {
-    margin: 0;
-    font-size: 2.5em;
-}
-
-header p {
-    margin: 5px 0 0;
-    font-size: 1.2em;
-}
-
-nav {
-    background-color: #444;
-    padding: 10px 0;
-}
-
-nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    text-align: center;
-}
-
-nav ul li {
-    display: inline;
-    margin: 0 15px;
-}
-
-nav ul li a {
-    color: red;
-    text-decoration: none;
-    font-weight: bold;
-}
-
-nav ul li a:hover {
-    text-decoration: underline;
+    background-color: #222;
 }
 
 main {
+    display: flex;
     padding: 20px;
 }
 
-section {
-    margin-bottom: 40px;
+aside {
+    width: 20%;
+    padding: 10px;
+    background-color: #333;
 }
 
-section h2 {
-    border-bottom: 2px solid white;
-    padding-bottom: 10px;
+#main-content {
+    width: 60%;
+    text-align: center;
 }
 
-section ul {
+#main-content input {
+    width: 80%;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+}
+
+#menu ul {
     list-style: none;
     padding: 0;
 }
 
-section ul li {
+#menu ul li {
     margin: 10px 0;
 }
 
-section ul li a {
-    color: red;
+#menu ul li a {
+    color: white;
     text-decoration: none;
+    display: flex;
+    align-items: center;
 }
 
-section ul li a:hover {
-    text-decoration: underline;
+#menu ul li a img {
+    width: 24px;
+    height: 24px;
+    margin-right: 10px;
 }
 
-footer {
-    text-align: center;
-    padding: 10px 0;
-    background-color: #333;
-    position: fixed;
-    width: 100%;
-    bottom: 0;
+#comments .comment {
+    margin-bottom: 10px;
+    padding: 10px;
+    background-color: #444;
+    border-radius: 5px;
 }
