--- a/styles.css
+++ b/styles.css
@@ -16,50 +16,14 @@ header h1 {
     margin: 0;
 }
 
-.sound-graphic {
+.image-container {
     text-align: center;
     padding: 10px 0;
 }
 
-.bar {
-    animation: sound 1s infinite;
-}
-
-.bar1 {
-    fill: red;
-    animation-delay: 0.1s;
-}
-
-.bar2 {
-    fill: green;
-    animation-delay: 0.2s;
-}
-
-.bar3 {
-    fill: blue;
-    animation-delay: 0.3s;
-}
-
-.bar4 {
-    fill: red;
-    animation-delay: 0.4s;
-}
-
-.bar5 {
-    fill: green;
-    animation-delay: 0.5s;
-}
-
-@keyframes sound {
-    0% {
-        height: 10px;
-    }
-    50% {
-        height: 30px;
-    }
-    100% {
-        height: 10px;
-    }
+.image-container img {
+    max-width: 100%;
+    height: auto;
 }
 
 main {
